--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-hello
+<body>
+
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyDUjDlXSCei8re3cjpYYyuiZD8CMrEHHO0",
+    authDomain: "pa-database-stupplab.firebaseapp.com",
+    databaseURL: "https://pa-database-stupplab.firebaseio.com",
+    projectId: "pa-database-stupplab",
+    storageBucket: "pa-database-stupplab.appspot.com",
+    messagingSenderId: "152049734382",
+    appId: "1:152049734382:web:47db92bd9d575193c4d9ff",
+    measurementId: "G-J831TKRQTB"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
+
+</body>
